--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,10 @@ fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
 
+# sensitive data
+
+Clima/Clima/Keys.plist
+
 # Code Injection
 #
 # After new code Injection tools there's a generated folder /iOSInjectionProject
